update auth and docs
