# docs/swagger.json
@@ -95,10 +95,6 @@
                         "accessToken": {
                           "type": "string",
                           "example": "MN5FsJaQVHgPsebJpGslokTgJG091Bk0+N+crjJ8"
-                        },
-                        "refreshToken": {
-                          "type": "string",
-                          "example": "0e541234567890abcdef1234567890abcdef"
                         }
                       }
                     }
@@ -184,14 +180,9 @@
                           "type": "string",
                           "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                         },
-                        "user": {
-                          "type": "object",
-                          "properties": {
-                            "id": {
-                              "type": "string",
-                              "example": "60d21b4667d0d8992e610c85"
-                            }
-                          }
+                        "userId": {
+                          "type": "string",
+                          "example": "60d21b4667d0d8992e610c85"
                         }
                       }
                     }
